# backend/public/swagger.json
@@ -122,6 +122,118 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"MoveOutputDTO": {
+				"properties": {
+					"gameId": {
+						"type": "number",
+						"format": "double"
+					},
+					"from": {
+						"properties": {
+							"col": {
+								"type": "number",
+								"format": "double"
+							},
+							"row": {
+								"type": "number",
+								"format": "double"
+							}
+						},
+						"required": [
+							"col",
+							"row"
+						],
+						"type": "object"
+					},
+					"to": {
+						"properties": {
+							"col": {
+								"type": "number",
+								"format": "double"
+							},
+							"row": {
+								"type": "number",
+								"format": "double"
+							}
+						},
+						"required": [
+							"col",
+							"row"
+						],
+						"type": "object"
+					},
+					"isValid": {
+						"type": "boolean"
+					},
+					"board": {}
+				},
+				"required": [
+					"gameId",
+					"from",
+					"to",
+					"isValid",
+					"board"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"MoveInputDTO": {
+				"properties": {
+					"gameId": {
+						"type": "number",
+						"format": "double"
+					},
+					"from": {
+						"properties": {
+							"col": {
+								"type": "number",
+								"format": "double"
+							},
+							"row": {
+								"type": "number",
+								"format": "double"
+							}
+						},
+						"required": [
+							"col",
+							"row"
+						],
+						"type": "object"
+					},
+					"to": {
+						"properties": {
+							"col": {
+								"type": "number",
+								"format": "double"
+							},
+							"row": {
+								"type": "number",
+								"format": "double"
+							}
+						},
+						"required": [
+							"col",
+							"row"
+						],
+						"type": "object"
+					},
+					"playerColor": {
+						"type": "string",
+						"enum": [
+							"white",
+							"black"
+						]
+					}
+				},
+				"required": [
+					"gameId",
+					"from",
+					"to",
+					"playerColor"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"AuthenticationInputDTO": {
 				"properties": {
 					"grant_type": {
@@ -474,6 +586,61 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/PlayerInputPatchDTO"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/moves": {
+			"get": {
+				"operationId": "GetAllMoves",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/MoveOutputDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Moves"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "MakeMove",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/MoveOutputDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Moves"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/MoveInputDTO"
 							}
 						}
 					}
