# backend/src/models/move.model.ts
@@ -1,55 +1,68 @@
 // move.model.ts
 import { Model, DataTypes } from 'sequelize';
 import sequelize from '../config/database';
-import Game from './game.model';  // Importer le modèle Game
-import Player from './player.model';  // Importer le modèle Player
 
 export class Move extends Model {
-  public id!: number;
-  public gameId!: number;
-  public playerId!: number;
-  public move!: string;
-  public createdAt!: Date;
+    public id!: number;
+    public gameId!: number;
+    public playerId!: number;
+    public fromRow!: number;
+    public fromCol!: number;
+    public toRow!: number;
+    public toCol!: number;
+    public createdAt!: Date;
 }
 
 Move.init(
-  {
-    id: {
-      type: DataTypes.INTEGER,
-      autoIncrement: true,
-      primaryKey: true,
+    {
+        id: {
+            type: DataTypes.INTEGER,
+            autoIncrement: true,
+            primaryKey: true,
+        },
+        gameId: {
+            type: DataTypes.INTEGER,
+            references: {
+                model: 'Games',
+                key: 'id',
+            },
+            allowNull: false,
+        },
+        playerId: {
+            type: DataTypes.INTEGER,
+            references: {
+                model: 'Players',
+                key: 'id',
+            },
+            allowNull: false,
+        },
+        fromRow: {
+            type: DataTypes.INTEGER,
+            allowNull: false,
+        },
+        fromCol: {
+            type: DataTypes.INTEGER,
+            allowNull: false,
+        },
+        toRow: {
+            type: DataTypes.INTEGER,
+            allowNull: false,
+        },
+        toCol: {
+            type: DataTypes.INTEGER,
+            allowNull: false,
+        },
+        createdAt: {
+            type: DataTypes.DATE,
+            allowNull: false,
+            defaultValue: DataTypes.NOW,
+        },
     },
-    gameId: {
-      type: DataTypes.INTEGER,
-      references: {
-        model: 'Games',
-        key: 'id',
-      },
-      allowNull: false,
-    },
-    playerId: {
-      type: DataTypes.INTEGER,
-      references: {
-        model: 'Players',
-        key: 'id',
-      },
-      allowNull: false,
-    },
-    move: {
-      type: DataTypes.STRING,
-      allowNull: false,
-    },
-    createdAt: {
-      type: DataTypes.DATE,
-      allowNull: false,
-      defaultValue: DataTypes.NOW,
-    },
-  },
-  {
-    sequelize,
-    tableName: 'Moves',
-    timestamps: false, 
-  }
+    {
+        sequelize,
+        tableName: 'Moves',
+        timestamps: false,
+    }
 );
 
 export default Move;
